--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.16.4",
-    "knex": "^0.16.5"
+    "knex": "^0.16.5",
+    "sqlite3": "^4.0.6"
   },
   "name": "webauth-i-challenge",
   "description": "## Topics!",
